--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -16,7 +16,7 @@
 
     <link href="./doc/site/images/favicon.ico" rel="icon" type="image/x-icon">
 </head>
-<body>
+<body style="zoom:2">
 <div id="optionsPanel" style="position:absolute;height:100%;width:260px">
   <a href="http://c9.io" title="Cloud9 IDE | Your code anywhere, anytime">
     <img id="c9-logo" src="demo/kitchen-sink/logo.png" style="width: 172px;margin: -9px 30px -12px 51px;">
