--- a/experiments/cut_copy.html
+++ b/experiments/cut_copy.html
@@ -19,7 +19,7 @@
         margin: 4px;
 	    width: 590px;
  	}
-
+    #a1, #a2, #a3 {display: inline-block; width:30%; height: 3em}
 	</style>
 	
 </head>
@@ -33,24 +33,30 @@
             1.) Try copying text from the first textarea and pasting into the third one.<br>
             2.) Then try from second to the third.<br>
             3.) The third textarea should most likely contain 3=copied=3=copied=10<br>
-            4.) Please copy the content of the log area bellow, and add to the bug report
+            4.) Then copy contents of the ace editor below into textarea 3<br>
+            5.) Please copy the content of the log area bellow, and add to the bug report
         </div>
+        <div id="a1"></div>
+        <!--<div id="a2">ace 2</div>
+        <div id="a3">ace 3</div>-->
     </div>
 
     <input type="button" value="Clear" id="some_name" onclick="document.getElementById('logger').innerHTML = ''">
     <div id="logger">
         
     </div>
-<!-- 
+ 
 <script src="../demo/kitchen-sink/require.js"></script>
 <script type="text/javascript" charset="utf-8">
 require.config({paths: { "ace" : "../lib/ace"}});
 require(["ace/ace"], function(ace) {
-    var editor = ace.edit("canvas");
-    
+    var a1 = ace.edit("a1");
+    a1.setValue("ace1")
+   // var a2 = ace.edit("a2");
+   // var a3 = ace.edit("a3");
 });
 </script>
--->
+ 
 <script type="text/javascript" charset="utf-8">
 var i = 0;
 var logger = document.getElementById("logger");
@@ -59,7 +65,7 @@ var log = function() {
     div.textContent = (i++) + ":" +  Array.prototype.join.call(arguments, "  ");
     logger.insertBefore(div, logger.firstChild);
 }
-
+console.log = log
 
 function addListener(elem, type, callback) {
     if (elem.addEventListener) {
@@ -116,17 +122,17 @@ function addListeners(text) {
     addListener(text, "keyup", logKey, false);
     addListener(text, "keypress", logKey, false);
 
-    addListener(text, "textInput", function(e) {
-        log(e.type, e.data, e);
+    addListener(text, "input", function(e) {
+        log(e.type, e.data, JSON.stringify(e.target.value));
     }, false);
 
     addListener(text, "copy", logClipboardEvent, false);
     addListener(text, "paste", logClipboardEvent, false);
     addListener(text, "cut", logClipboardEvent, false);
 
-    addListener(text, "beforecopy", logClipboardEvent, false);
-    addListener(text, "beforepaste", logClipboardEvent, false);
-    addListener(text, "beforecut", logClipboardEvent, false);
+    // addListener(text, "beforecopy", logClipboardEvent, false);
+    // addListener(text, "beforepaste", logClipboardEvent, false);
+    // addListener(text, "beforecut", logClipboardEvent, false);
 
     addListener(text, "compositionstart", logEvent, false);
     addListener(text, "compositionupdate", logEvent, false);
