--- a/demo/code_lens.html
+++ b/demo/code_lens.html
@@ -110,7 +110,7 @@ require(["ace/ace", "ace/ext/code_lens"], function(ace, codeLens) {
                 });
 
             }
-            callback(p);
+            callback(null, p);
         }
     });
 
