--- a/diff0/index.html
+++ b/diff0/index.html
@@ -45,13 +45,19 @@
         window.diffView = diffView;
         
         require("ace-code/src/lib/net").get("./diff/0.ts", function(v) {
-            diffView.left.setValue(v, -1);
+            
+            diffView.left.setValue(localStorage.orig || v, -1);
             diffView.left.session.setMode("ace-code/src/mode/typescript");
         });
         require("ace-code/src/lib/net").get("./diff/1.ts", function(v) {
-            diffView.right.setValue(v, -1);
+            diffView.right.setValue(localStorage.edit || v, -1);
             diffView.right.session.setMode("ace-code/src/mode/typescript");
         });
+
+        window.onbeforeunload = function() {
+            localStorage.orig = diffView.orig.getValue()
+            localStorage.edit = diffView.edit.getValue()
+        }
     });
 
 </script>
